try fix animation on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ code {
     opacity: 1;
     filter: brightness(1) blur(10px);
   }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 .land-bg {
